# nus-benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt
nus_benchmark/: __init__.py  io_bruker.py  load_real_reference.py  peaks.py  reconstruct.py  schedules.py  scoring.py  synthetic.py  undersample.py
scripts/: init_git.sh  plot_results.py  run_benchmark.py  run_benchmark_real.py
tests/: test_pipeline.py
